--- a/css/main.less
+++ b/css/main.less
@@ -56,7 +56,7 @@ li {
 .img{width: 100%;max-width: 100%;display: block;float: left;}
 section{background: #fff;width:100%;padding-bottom:8/@r;}
 ._con{float: left;width: 96%;padding: 10/@r 2% 20/@r 2%;background: #F7F7F7;overflow: hidden;}
-.sectionh{height: 590/@r;}
+.sectionh{height: 590/@r;position: relative;}
 .color{color: #B60005 !important;}
 .bgcolor{background: #B60005 !important;}
 .bor_bn{border-bottom:1px solid #B60005;}
@@ -127,7 +127,7 @@ footer p{float: left;width: 100%;font-size: 16/@r;text-align: center;color: #000
 .new_s{width:96%;height:95/@r;padding:10/@r 0;float: left;border-bottom: 1px solid #e5e5e5;margin:0 2%;}
 .new_s:nth-last-of-type(1){border-bottom:0;}
 .new_boxs{width: 100%;background: #fff;padding-top:10/@r;margin-top:-10/@r;float: left;overflow: hidden;position: relative;}
-.logol{position: absolute;right:10/@r;bottom: 10/@r;width: 122/@r;height: 172/@r;}
+.logol{position: absolute;right:15/@r;bottom: 20/@r;width: 122/@r;height: 172/@r;z-index:999999;}
 .new_left{width: 24%;height:100%;float: left;display: block;}
 .new_right{width: 76%;height: 100%;float: left;display: block;}
 .new_right ul{height: 100%;width: 100%;}
