--- a/css/dome1.css
+++ b/css/dome1.css
@@ -1,3 +1,6 @@
+.banner {
+  overflow: hidden;
+}
 .banner_nav {
   width: 100%;
   height: 0.88rem;
@@ -16,6 +19,12 @@
   line-height: 0.76rem;
   color: #1a1a1a;
   font-size: 0.36rem;
+}
+.banners {
+  float: left;
+  width: 100%;
+  height: auto;
+  overflow: hidden;
 }
 .banner_navs {
   width: 100%;
