--- a/css/dome1.less
+++ b/css/dome1.less
@@ -1,11 +1,11 @@
 @r:50rem;
 
 
-
+.banner{overflow: hidden;}
 .banner_nav{width: 100%;height:44/@r;float: left;background: #f7f7f7;}
 .banner_nav ul li{float: left;width:33%;}
 .banner_nav ul li a{float: left;width:100%;text-align: center;height: 38/@r;line-height: 38/@r;color:#1a1a1a;font-size: 18/@r;}
-
+.banners{float: left;width: 100%;height: auto;overflow: hidden;}
 
 
 .banner_navs{width: 100%;height:44/@r;float: left;background: #f7f7f7;}
@@ -16,7 +16,6 @@
 .product_name{width: 98%;float: left;padding:25/@r 2% 25/@r 0;}
 .product_name h5{color: #232323;width: 100%;font-size: 26/@r;padding:0;margin:0;}
 .product_name p{color:#999;float: left;width: 100%;font-size: 20/@r;margin-top: 8/@r;}
-//.banners{background:url(../img/b8625fe007.jpg) no-repeat;background-size:100% 100%;width: 100%;height:185/@r;margin:1px 0;}
 
 
 
