--- a/css/main.less
+++ b/css/main.less
@@ -104,7 +104,7 @@ header{background: #fff;width: 100%;height: 100/@r;background: #fff;}
 footer{padding:50/@r 0 20/@r 0;}
 footer p{float: left;width: 100%;font-size: 16/@r;text-align: center;color: #000;padding:5/@r 0;}
 //---------------------------contant------------------------------------------
-.contant_form{width:92%;float: left;background:#f7f7f7;padding:20/@r 4%;height: 400/@r;}
+.contant_form{width:92%;float: left;background:#f7f7f7;padding:20/@r 4%;height:460/@r;}
 .form_bg{background: #fff;width: 100%;height: 100%;position: relative;}
 .contant_form span{float: left;width: 100%;margin:10/@r 15/@r;}
 .contant_form span input{float: left;display: block;border:1px solid #232323;padding:0 3px;width: 350/@r;height: 36/@r;line-height: 36/@r;font-size:14/@r;}
@@ -121,8 +121,10 @@ footer p{float: left;width: 100%;font-size: 16/@r;text-align: center;color: #000
 .map_top span p:nth-of-type(1){color: #999999;font-size: 18/@r;width:15%;}
 .map_top span p:nth-of-type(2){color: #232323;font-size: 18/@r;width: 70%;}
 #map{float: left;width: 100%;height:290/@r;}
-
-
+.yl{width:100/@r !important;}
+#ys{width:135/@r !important;display: block;height: 40/@r;line-height: 40/@r;}
+#yt{float: left;background: #FFFF00;height:41/@r !important;margin-left:20/@r;padding: 2/@r;width: 135/@r;}
+.bsn{font-size:25/@r;height:45/@r;display: block;line-height: 45/@r;margin-left: 10/@r;float: left;}
 //动态
 .new_s{width:96%;height:95/@r;padding:10/@r 0;float: left;border-bottom: 1px solid #e5e5e5;margin:0 2%;}
 .new_s:nth-last-of-type(1){border-bottom:0;}
@@ -146,16 +148,16 @@ footer p{float: left;width: 100%;font-size: 16/@r;text-align: center;color: #000
 .videos:nth-of-type(1){margin-bottom: 20/@r;}
 //product
 
-.product{background: #fff;width: 40%;margin:20/@r 5% 220/@r 5%;overflow: hidden;float: left;}
+.product{background: #fff;width: 40%;margin:20/@r 5% 0 5%;overflow: hidden;float: left;}
 .product span{width:100%;height: 315/@r;float: left;display: block;}
 .product p a{text-align: center;background:#f3e1be;height: 55/@r;line-height:55/@r;color: #232323;float: left;width:100%;font-size: 24/@r;}
 
 
 //detail
 .detail_box{overflow: hidden;position: relative;}
-.detail_top{width: 100%;background: #F7F7F7;height: 55/@r;font-size: 24/@r;text-align: center;line-height: 55/@r;color: #232323;font-weight: normal;}
-.detail_bn{width:94%;background: #fff;padding:10/@r 3%;float:left;}
+.detail_top{display: block;width: 100%;background: #F7F7F7;height: 55/@r;font-size: 24/@r;text-align: center;line-height: 55/@r;color: #232323;font-weight: normal;}
+.detail_bn{display: block;width:94%;background: #fff;padding:10/@r 3%;float:left;}
 .logob{height:80%;background: url(../img/logob.png) no-repeat;background-size:100% 100%;width: 245/@r;position: absolute;top:20%;right: 10/@r;opacity: 0.5;}
-.ts{background:url(../img/detailbg.png) no-repeat;background-size:100% 100%;padding:25/@r 0;}
+.ts{display: block;background:url(../img/detailbg.png) no-repeat;background-size:100% 100%;padding:25/@r 0;}
 .detail_bn p{float: left;width:100%;text-indent: 2em;color: #333333;font-size:18/@r;line-height:200%;}
 .detail_bn h3{background: url(../img/bordera.png) no-repeat;background-size: 100% 100%;color:#c49858;font-size:20/@r;width: 235/@r;height: 50/@r;text-align: center;line-height: 50/@r;margin:10/@r auto;}
