--- a/css/main.css
+++ b/css/main.css
@@ -294,7 +294,7 @@ footer p {
   float: left;
   background: #f7f7f7;
   padding: 0.4rem 4%;
-  height: 8rem;
+  height: 9.2rem;
 }
 .form_bg {
   background: #fff;
@@ -397,6 +397,31 @@ footer p {
   float: left;
   width: 100%;
   height: 5.8rem;
+}
+.yl {
+  width: 2rem !important;
+}
+#ys {
+  width: 2.7rem !important;
+  display: block;
+  height: 0.8rem;
+  line-height: 0.8rem;
+}
+#yt {
+  float: left;
+  background: #FFFF00;
+  height: 0.82rem !important;
+  margin-left: 0.4rem;
+  padding: 0.04rem;
+  width: 2.7rem;
+}
+.bsn {
+  font-size: 0.5rem;
+  height: 0.9rem;
+  display: block;
+  line-height: 0.9rem;
+  margin-left: 0.2rem;
+  float: left;
 }
 .new_s {
   width: 96%;
@@ -514,7 +539,7 @@ footer p {
 .product {
   background: #fff;
   width: 40%;
-  margin: 0.4rem 5% 4.4rem 5%;
+  margin: 0.4rem 5% 0 5%;
   overflow: hidden;
   float: left;
 }
@@ -539,6 +564,7 @@ footer p {
   position: relative;
 }
 .detail_top {
+  display: block;
   width: 100%;
   background: #F7F7F7;
   height: 1.1rem;
@@ -549,6 +575,7 @@ footer p {
   font-weight: normal;
 }
 .detail_bn {
+  display: block;
   width: 94%;
   background: #fff;
   padding: 0.2rem 3%;
@@ -565,6 +592,7 @@ footer p {
   opacity: 0.5;
 }
 .ts {
+  display: block;
   background: url(../img/detailbg.png) no-repeat;
   background-size: 100% 100%;
   padding: 0.5rem 0;
