--- a/css/dome1.less
+++ b/css/dome1.less
@@ -13,10 +13,10 @@
 .banner_navs ul li a{float: left;width:100%;text-align: center;height: 38/@r;line-height: 38/@r;color:#1a1a1a;font-size: 18/@r;}
 .banner_box{padding: 0 3%;background: #F7F7F7;float: left;width: 94%;}
 .banner_ts{width:98%;background: #fff;padding:0 0 0 2%;overflow: hidden;}
-.product_name{width: 98%;float: left;padding:25/@r 2% 25/@r 0;}
-.product_name h5{color: #232323;width: 100%;font-size: 26/@r;padding:0;margin:0;}
+.product_name{width: 96%;float: left;padding:25/@r 2% 10/@r 2%;background: #fff;margin-bottom:15/@r;}
+.product_name h5{color: #232323;width: 100%;font-size: 28/@r;padding:0;margin:0;}
 .product_name p{color:#999;float: left;width: 100%;font-size: 20/@r;margin-top: 8/@r;}
-
+//pre{background:url(img/logod.png) no-repeat right bottom;background-size:380/@r 515/@r;}
 
 
 
