--- a/css/main.css
+++ b/css/main.css
@@ -56,6 +56,9 @@ li {
 .float {
   float: left;
 }
+.position {
+  position: relative;
+}
 .img {
   width: 100%;
   max-width: 100%;
@@ -75,8 +78,9 @@ section {
   overflow: hidden;
 }
 .sectionh {
-  height: 11.8rem;
+  height: 11.4rem;
   position: relative;
+  overflow: hidden;
 }
 .color {
   color: #B60005 !important;
@@ -367,7 +371,7 @@ footer p {
 }
 .map_con {
   width: 92%;
-  height: 92%;
+  height: 90%;
   padding: 3%;
   background: #fff;
 }
@@ -442,6 +446,9 @@ footer p {
   float: left;
   overflow: hidden;
   position: relative;
+  overflow-x: hidden;
+  overflow-y: auto;
+  height: 100%;
 }
 .logol {
   position: absolute;
@@ -550,14 +557,13 @@ footer p {
   display: block;
 }
 .product p a {
-  text-align: center;
   background: #f3e1be;
-  height: 1.1rem;
-  line-height: 1.1rem;
   color: #232323;
   float: left;
   width: 100%;
   font-size: 0.48rem;
+  text-align: center;
+  padding: 0.1rem 0;
 }
 .detail_box {
   overflow: hidden;
@@ -577,19 +583,10 @@ footer p {
 .detail_bn {
   display: block;
   width: 94%;
-  background: #fff;
   padding: 0.2rem 3%;
   float: left;
-}
-.logob {
-  height: 80%;
-  background: url(../img/logob.png) no-repeat;
-  background-size: 100% 100%;
-  width: 4.9rem;
-  position: absolute;
-  top: 20%;
-  right: 0.2rem;
-  opacity: 0.5;
+  background: url(../img/logob.png) no-repeat 95% bottom #ffffff;
+  background-size: 5.1rem;
 }
 .ts {
   display: block;
@@ -615,4 +612,24 @@ footer p {
   text-align: center;
   line-height: 1rem;
   margin: 0.2rem auto;
+}
+.bs {
+  width: 100%;
+  height: 0.08rem;
+  float: left;
+  margin-top: 0.2rem;
+}
+.det {
+  background: url(img/logod.png) no-repeat;
+  background-size: 100% 100%;
+  width: 7.6rem;
+  height: 10.3rem;
+  position: absolute;
+  right: 0.2rem;
+  bottom: 0.3rem;
+  z-index: 9999;
+}
+.sd {
+  width: 96%;
+  margin: 0 2%;
 }
