--- a/css/main.less
+++ b/css/main.less
@@ -53,10 +53,11 @@ li {
 .xb_box{width: 100%;margin: 0 auto;overflow:hidden;position: relative;}
 .width{width: 100%;}
 .float{float: left;}
+.position{position: relative;}
 .img{width: 100%;max-width: 100%;display: block;float: left;}
 section{background: #fff;width:100%;padding-bottom:8/@r;}
 ._con{float: left;width: 96%;padding: 10/@r 2% 20/@r 2%;background: #F7F7F7;overflow: hidden;}
-.sectionh{height: 590/@r;position: relative;}
+.sectionh{height: 570/@r;position: relative;overflow: hidden;}
 .color{color: #B60005 !important;}
 .bgcolor{background: #B60005 !important;}
 .bor_bn{border-bottom:1px solid #B60005;}
@@ -114,7 +115,7 @@ footer p{float: left;width: 100%;font-size: 16/@r;text-align: center;color: #000
 .contant_form span input[type='button']{width:80/@r;height: 40/@r;text-align: center;border:1px solid #f3e1be;border-radius:15%;background: #f3e1be;margin-left:88/@r;}
 .form_logos{width: 124/@r;height: 175/@r;position: absolute;right: 0;bottom: 0;background: url(../img/logos.png) no-repeat;background-size: 100% 100%;z-index: 99999;}
 .contant_map{width:92%;float: left;background:#f7f7f7;padding:20/@r 4% 0 4%;height:500/@r;}
-.map_con{width:92%;height:92%;padding:3%;background: #fff;}
+.map_con{width:92%;height:90%;padding:3%;background: #fff;}
 .map_top{width: 100%;float: left;margin-bottom:30/@r;}
 .map_top span{float: left;width: 100%;}
 .map_top span p{float: left;}
@@ -128,7 +129,7 @@ footer p{float: left;width: 100%;font-size: 16/@r;text-align: center;color: #000
 //动态
 .new_s{width:96%;height:95/@r;padding:10/@r 0;float: left;border-bottom: 1px solid #e5e5e5;margin:0 2%;}
 .new_s:nth-last-of-type(1){border-bottom:0;}
-.new_boxs{width: 100%;background: #fff;padding-top:10/@r;margin-top:-10/@r;float: left;overflow: hidden;position: relative;}
+.new_boxs{width: 100%;background: #fff;padding-top:10/@r;margin-top:-10/@r;float: left;overflow: hidden;position: relative;overflow-x: hidden;overflow-y: auto;height: 100%;}
 .logol{position: absolute;right:15/@r;bottom: 20/@r;width: 122/@r;height: 172/@r;z-index:999999;}
 .new_left{width: 24%;height:100%;float: left;display: block;}
 .new_right{width: 76%;height: 100%;float: left;display: block;}
@@ -150,14 +151,17 @@ footer p{float: left;width: 100%;font-size: 16/@r;text-align: center;color: #000
 
 .product{background: #fff;width: 40%;margin:20/@r 5% 0 5%;overflow: hidden;float: left;}
 .product span{width:100%;height: 315/@r;float: left;display: block;}
-.product p a{text-align: center;background:#f3e1be;height: 55/@r;line-height:55/@r;color: #232323;float: left;width:100%;font-size: 24/@r;}
+.product p a{text-align: center;background:#f3e1be;color: #232323;float: left;width:100%;font-size: 24/@r;text-align: center;padding:5/@r 0;}
 
 
 //detail
 .detail_box{overflow: hidden;position: relative;}
 .detail_top{display: block;width: 100%;background: #F7F7F7;height: 55/@r;font-size: 24/@r;text-align: center;line-height: 55/@r;color: #232323;font-weight: normal;}
-.detail_bn{display: block;width:94%;background: #fff;padding:10/@r 3%;float:left;}
-.logob{height:80%;background: url(../img/logob.png) no-repeat;background-size:100% 100%;width: 245/@r;position: absolute;top:20%;right: 10/@r;opacity: 0.5;}
+.detail_bn{display: block;width:94%;padding:10/@r 3%;float:left;background: url(../img/logob.png) no-repeat 95% bottom #fff;background-size:255/@r;}
+//.logob{height:80%;background: url(../img/logob.png) no-repeat;background-size:100% 100%;width: 245/@r;position: absolute;top:20%;right: 10/@r;opacity: 0.1;}
 .ts{display: block;background:url(../img/detailbg.png) no-repeat;background-size:100% 100%;padding:25/@r 0;}
 .detail_bn p{float: left;width:100%;text-indent: 2em;color: #333333;font-size:18/@r;line-height:200%;}
 .detail_bn h3{background: url(../img/bordera.png) no-repeat;background-size: 100% 100%;color:#c49858;font-size:20/@r;width: 235/@r;height: 50/@r;text-align: center;line-height: 50/@r;margin:10/@r auto;}
+.bs{width: 100%;height:4/@r;float: left;margin-top: 10/@r;}
+.det{background:url(img/logod.png) no-repeat;background-size:100% 100%;width:380/@r;height:515/@r;position: absolute;right: 10/@r;bottom:15/@r;z-index: 9999;}
+.sd{width: 96%;margin: 0 2%;}
