--- a/css/main.less
+++ b/css/main.less
@@ -130,18 +130,18 @@ footer p{float: left;width: 100%;font-size: 16/@r;text-align: center;color: #000
 .new_s{width:96%;height:95/@r;padding:10/@r 0;float: left;border-bottom: 1px solid #e5e5e5;margin:0 2%;}
 .new_s:nth-last-of-type(1){border-bottom:0;}
 .new_boxs{width: 100%;background: #fff;padding-top:10/@r;margin-top:-10/@r;float: left;overflow: hidden;position: relative;overflow-x: hidden;overflow-y: auto;height: 100%;}
-.logol{position: absolute;right:15/@r;bottom: 20/@r;width: 122/@r;height: 172/@r;z-index:999999;}
-.new_left{width: 24%;height:100%;float: left;display: block;}
+.logol{position: absolute;right:30/@r;bottom: 20/@r;width: 122/@r;height: 172/@r;z-index:999999;}
+.new_left{float: left;display: block;overflow: hidden;width:24%;height: 100/@r;}
 .new_right{width: 76%;height: 100%;float: left;display: block;}
 .new_right ul{height: 100%;width: 100%;}
 .new_right li{width: 100%;float: left;}
 .new_right li:nth-of-type(1){background:url(../img/d.png) no-repeat 7% center;background-size:8/@r 8/@r;height: 40%;}
 .new_right li:nth-of-type(2){height: 60%;}
 .new_right li a{float: left;display: block;width:80%;height: 100%;padding-left:10%;}
-.new_right li:nth-of-type(1) a{color: #232323;font-size:26/@r;line-height: 150%;font-weight:400;}
-.new_right li:nth-of-type(2) a{color: #999999;font-size: 18/@r;padding-left:7%;letter-spacing:2/@r;}
+.new_right li:nth-of-type(1) a{color: #232323;font-size:26/@r;line-height: 150%;font-weight:400; white-space:nowrap;text-overflow:ellipsis;overflow:hidden;}
+.new_right li:nth-of-type(2) a{color: #999999;font-size: 18/@r;padding-left:8%;letter-spacing:2/@r;text-overflow:ellipsis;overflow:hidden;}
 .new_bt{background: #f7f7f7;cursor: pointer;}
-.moreNew{float: left;width:96%;padding: 5/@r 0 5/@r 0;margin:5/@r 2% 0 2%;overflow: hidden;font-size: 16/@r;color:#b30003;text-align: center;text-decoration: underline;background: url(../img/more.png) no-repeat right center #fff;background-size:14/@r 17/@r;}
+.moreNew{float: left;width:96%;padding: 5/@r 0 5/@r 0;margin:5/@r 2% 0 2%;overflow: hidden;font-size: 16/@r;color:#b30003;text-align: center;text-decoration: underline;background: url(../img/more.png) no-repeat 98% center #fff;background-size:14/@r 17/@r;}
 .moreNew a{color: #B30003;}
 //video
 .videos{width: 100%;height:440/@r;float:left;background: #fff;overflow: hidden;}
