--- a/css/main.css
+++ b/css/main.css
@@ -574,6 +574,12 @@ footer p {
 .detail_box {
   overflow: hidden;
   position: relative;
+  width: 96%;
+  padding: 0 2%;
+  text-indent: 2em;
+  color: #333333;
+  font-size: 0.46rem;
+  line-height: 200%;
 }
 .detail_top {
   display: block;
@@ -595,29 +601,39 @@ footer p {
   background-size: 5.1rem;
 }
 .ts {
-  display: block;
   background: url(../img/detailbg.png) no-repeat;
   background-size: 100% 100%;
   padding: 0.5rem 0;
+  display: block;
 }
-.detail_bn p {
+.detail_box div {
   float: left;
   width: 100%;
   text-indent: 2em;
   color: #333333;
-  font-size: 0.36rem;
+  font-size: 0.46rem;
   line-height: 200%;
 }
-.detail_bn h3 {
+.detail_box p {
+  float: left;
+  width: 100%;
+  text-indent: 2em;
+  color: #333333;
+  font-size: 0.46rem;
+  line-height: 200%;
+}
+.detail_box strong {
+  width: 100%;
+  float: left;
+  text-align: center;
+}
+.detail_box strong span {
   background: url(../img/bordera.png) no-repeat;
   background-size: 100% 100%;
   color: #c49858;
-  font-size: 0.4rem;
-  width: 4.7rem;
-  height: 1rem;
-  text-align: center;
-  line-height: 1rem;
-  margin: 0.2rem auto;
+  font-size: 0.44rem;
+  padding: 0.2rem 0.4rem;
+  margin: 0.4rem 0;
 }
 .bs {
   width: 100%;
