--- a/css/main.less
+++ b/css/main.less
@@ -155,13 +155,15 @@ footer p{float: left;width: 100%;font-size: 16/@r;text-align: center;color: #000
 
 
 //detail
-.detail_box{overflow: hidden;position: relative;}
+.detail_box{overflow: hidden;position: relative;width:96%;padding: 0 2%;text-indent: 2em;color: #333333;font-size:23/@r;line-height:200%;}
 .detail_top{display: block;width: 100%;background: #F7F7F7;height: 55/@r;font-size: 24/@r;text-align: center;line-height: 55/@r;color: #232323;font-weight: normal;}
 .detail_bn{display: block;width:94%;padding:10/@r 3%;float:left;background: url(../img/logob.png) no-repeat 95% bottom #fff;background-size:255/@r;}
 //.logob{height:80%;background: url(../img/logob.png) no-repeat;background-size:100% 100%;width: 245/@r;position: absolute;top:20%;right: 10/@r;opacity: 0.1;}
-.ts{display: block;background:url(../img/detailbg.png) no-repeat;background-size:100% 100%;padding:25/@r 0;}
-.detail_bn p{float: left;width:100%;text-indent: 2em;color: #333333;font-size:18/@r;line-height:200%;}
-.detail_bn h3{background: url(../img/bordera.png) no-repeat;background-size: 100% 100%;color:#c49858;font-size:20/@r;width: 235/@r;height: 50/@r;text-align: center;line-height: 50/@r;margin:10/@r auto;}
+.ts{display: block;background:url(../img/detailbg.png) no-repeat;background-size:100% 100%;padding:25/@r 0;display: block;}
+.detail_box div{float: left;width:100%;text-indent: 2em;color: #333333;font-size:23/@r;line-height:200%;}
+.detail_box p{float: left;width:100%;text-indent: 2em;color: #333333;font-size:23/@r;line-height:200%;}
+.detail_box strong{width: 100%;float: left;text-align:center;}
+.detail_box strong span{background: url(../img/bordera.png) no-repeat;background-size: 100% 100%;color:#c49858;font-size:22/@r;padding: 10/@r 20/@r;margin: 20/@r 0;}
 .bs{width: 100%;height:4/@r;float: left;margin-top: 10/@r;}
 .det{background:url(img/logod.png) no-repeat;background-size:100% 100%;width:380/@r;height:515/@r;position: absolute;right: 10/@r;bottom:15/@r;z-index: 9999;}
 .sd{width: 96%;margin: 0 2%;}
