--- a/css/main.less
+++ b/css/main.less
@@ -55,7 +55,7 @@ li {
 .float{float: left;}
 .position{position: relative;}
 .img{width: 100%;max-width: 100%;display: block;float: left;}
-section{background: #fff;width:100%;padding-bottom:8/@r;}
+section{background: #fff;width:100%;padding-bottom:8/@r;position: relative;}
 ._con{float: left;width: 96%;padding: 10/@r 2% 20/@r 2%;background: #F7F7F7;overflow: hidden;}
 .sectionh{height: 570/@r;position: relative;overflow: hidden;}
 .color{color: #B60005 !important;}
@@ -167,3 +167,4 @@ footer p{float: left;width: 100%;font-size: 16/@r;text-align: center;color: #000
 .bs{width: 100%;height:4/@r;float: left;margin-top: 10/@r;}
 .det{background:url(img/logod.png) no-repeat;background-size:100% 100%;width:380/@r;height:515/@r;position: absolute;right: 10/@r;bottom:15/@r;z-index: 9999;}
 .sd{width: 96%;margin: 0 2%;}
+.logos{width:256/@r;position: absolute;right: 2%;bottom: 1%;}
