--- a/css/main.css
+++ b/css/main.css
@@ -69,6 +69,7 @@ section {
   background: #fff;
   width: 100%;
   padding-bottom: 0.16rem;
+  position: relative;
 }
 ._con {
   float: left;
@@ -654,4 +655,10 @@ footer p {
 .sd {
   width: 96%;
   margin: 0 2%;
+}
+.logos {
+  width: 5.12rem;
+  position: absolute;
+  right: 2%;
+  bottom: 1%;
 }
