--- a/css/css.css
+++ b/css/css.css
@@ -1,1 +1,17 @@
-.new_boxs{overflow-x: hidden;overflow-y: auto;height: 100%;}
+.title {
+  background: #f7f7f7;
+  width: 100%;
+  height: 1.2rem !important;
+  line-height: 1.2rem !important;
+  position: absolute;
+  top: 0;
+  left: 0;
+  float: none !important;
+  text-indent: 0 !important;
+  text-align: center;
+}
+.contents {
+  margin-top: 1.22rem;
+  width: 100%;
+  float: left;
+}
