--- a/css/main.less
+++ b/css/main.less
@@ -112,7 +112,7 @@ footer p{float: left;width: 100%;font-size: 16/@r;text-align: center;color: #000
 .contant_form span p{width:80/@r;height: 36/@r;float: left;color: #999;font-size:23/@r;}
 .contant_form span b{float: left;color: #b92629;font-size:25/@r;margin-right:10/@r;}
 .contant_form span textarea{float: left;display: block;border:1px solid #232323;padding:3px;width:430/@r;font-size: 14/@r;color: #B30003;}
-.contant_form span input[type='button']{width:80/@r;height: 40/@r;text-align: center;border:1px solid #f3e1be;border-radius:15%;background: #f3e1be;margin-left:88/@r;}
+.contant_form span input[type='submit']{width:80/@r;height: 40/@r;text-align: center;border:1px solid #f3e1be;border-radius:15%;background: #f3e1be;margin-left:88/@r;}
 .form_logos{width: 124/@r;height: 175/@r;position: absolute;right: 0;bottom: 0;background: url(../img/logos.png) no-repeat;background-size: 100% 100%;z-index: 99999;}
 .contant_map{width:92%;float: left;background:#f7f7f7;padding:20/@r 4% 0 4%;height:500/@r;}
 .map_con{width:92%;height:90%;padding:3%;background: #fff;}
@@ -123,7 +123,7 @@ footer p{float: left;width: 100%;font-size: 16/@r;text-align: center;color: #000
 .map_top span p:nth-of-type(2){color: #232323;font-size: 18/@r;width: 70%;}
 #map{float: left;width: 100%;height:290/@r;}
 .yl{width:100/@r !important;}
-#ys{width:135/@r !important;display: block;height: 40/@r;line-height: 40/@r;}
+#VCode{width:135/@r !important;display: block;height: 40/@r;line-height: 40/@r;}
 #yt{float: left;background: #FFFF00;height:41/@r !important;margin-left:20/@r;padding: 2/@r;width: 135/@r;}
 .bsn{font-size:25/@r;height:45/@r;display: block;line-height: 45/@r;margin-left: 10/@r;float: left;}
 //动态
