--- a/css/main.less
+++ b/css/main.less
@@ -124,7 +124,7 @@ footer p{float: left;width: 100%;font-size: 16/@r;text-align: center;color: #000
 #map{float: left;width: 100%;height:290/@r;}
 .yl{width:100/@r !important;}
 #VCode{width:135/@r !important;display: block;height: 40/@r;line-height: 40/@r;}
-#yt{float: left;background: #FFFF00;height:41/@r !important;margin-left:20/@r;padding: 2/@r;width: 135/@r;}
+.yt{float: left;background: #FFFF00;height:41/@r !important;margin-left:20/@r;padding: 2/@r;width: 135/@r;}
 .bsn{font-size:25/@r;height:45/@r;display: block;line-height: 45/@r;margin-left: 10/@r;float: left;}
 //动态
 .new_s{width:96%;height:95/@r;padding:10/@r 0;float: left;border-bottom: 1px solid #e5e5e5;margin:0 2%;}
