--- a/css/main.less
+++ b/css/main.less
@@ -168,3 +168,5 @@ footer p{float: left;width: 100%;font-size: 16/@r;text-align: center;color: #000
 .det{background:url(img/logod.png) no-repeat;background-size:100% 100%;width:380/@r;height:515/@r;position: absolute;right: 10/@r;bottom:15/@r;z-index: 9999;}
 .sd{width: 96%;margin: 0 2%;}
 .logos{width:256/@r;position: absolute;right: 2%;bottom: 1%;}
+.hx{float: left;width:100%;height:15/@r;background: #F7F7F7;}
+.hx div{width:96%;height: 100%;float: left;background: #fff;margin: 0 2%;}
