--- a/css/css.css
+++ b/css/css.css
@@ -1,4 +1,10 @@
 .title {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  font-size: 0.52rem !important;
+  font-weight: 600;
+  color: #323232;
   background: #f7f7f7;
   width: 100%;
   height: 1.2rem !important;
