--- a/css/css.less
+++ b/css/css.less
@@ -2,5 +2,5 @@
 
 
 
-.title{background: #f7f7f7;width: 100%;height:60/@r !important;line-height:60/@r !important;position: absolute;top: 0;left: 0;float: none !important;text-indent:0 !important;text-align: center;}
+.title{white-space:nowrap;text-overflow:ellipsis;overflow:hidden;font-size:26/@r !important;font-weight: 600;color:#323232;background: #f7f7f7;width: 100%;height:60/@r !important;line-height:60/@r !important;position: absolute;top: 0;left: 0;float: none !important;text-indent:0 !important;text-align: center;}
 .contents{margin-top: 61/@r;width: 100%;float: left;}
