--- a/css/main.less
+++ b/css/main.less
@@ -150,23 +150,25 @@ footer p{float: left;width: 100%;font-size: 16/@r;text-align: center;color: #000
 //product
 
 .product{background: #fff;width: 40%;margin:20/@r 5% 0 5%;overflow: hidden;float: left;}
-.product span{width:100%;height: 315/@r;float: left;display: block;}
+//.product img{width: 100%;max-width: 100%;display: block;float: left;}
+.product span{width:100%;float: left;display: block;}
 .product p a{text-align: center;background:#f3e1be;color: #232323;float: left;width:100%;font-size: 24/@r;text-align: center;padding:5/@r 0;}
 
 
 //detail
-.detail_box{overflow: hidden;position: relative;width:96%;padding: 0 2%;text-indent: 2em;color: #333333;font-size:23/@r;line-height:200%;}
+.detail_box{overflow: hidden;position: relative;width:96%;padding: 0 2%;color: #333333;font-size:23/@r;line-height:200%;}
 .detail_top{display: block;width: 100%;background: #F7F7F7;height: 55/@r;font-size: 24/@r;text-align: center;line-height: 55/@r;color: #232323;font-weight: normal;}
 .detail_bn{display: block;width:94%;padding:10/@r 3%;float:left;background: url(../img/logob.png) no-repeat 95% bottom #fff;background-size:255/@r;}
-//.logob{height:80%;background: url(../img/logob.png) no-repeat;background-size:100% 100%;width: 245/@r;position: absolute;top:20%;right: 10/@r;opacity: 0.1;}
 .ts{display: block;background:url(../img/detailbg.png) no-repeat;background-size:100% 100%;padding:25/@r 0;display: block;}
-.detail_box div{float: left;width:100%;text-indent: 2em;color: #333333;font-size:23/@r;line-height:200%;}
-.detail_box p{float: left;width:100%;text-indent: 2em;color: #333333;font-size:23/@r;line-height:200%;}
-.detail_box strong{width: 100%;float: left;text-align:center;}
-.detail_box strong span{background: url(../img/bordera.png) no-repeat;background-size: 100% 100%;color:#c49858;font-size:22/@r;padding: 10/@r 20/@r;margin: 20/@r 0;}
+.detail_box div{float: left;width:100%;color: #333333;font-size:23/@r;line-height:200%;}
+.detail_box p{float: left;width:100%;color: #333333;font-size:23/@r;line-height:200%;}
+.strong{width: 100%;float: left;text-align:center;}
+.strong span{color:#c49858;font-size:22/@r;padding: 10/@r 20/@r;margin: 20/@r 0;}
+//.strong span{background: url(../img/bordera.png) no-repeat;background-size: 100% 100%;color:#c49858;font-size:22/@r;padding: 10/@r 20/@r;margin: 20/@r 0;}
 .bs{width: 100%;height:4/@r;float: left;margin-top: 10/@r;}
 .det{background:url(img/logod.png) no-repeat;background-size:100% 100%;width:380/@r;height:515/@r;position: absolute;right: 10/@r;bottom:15/@r;z-index: 9999;}
 .sd{width: 96%;margin: 0 2%;}
-.logos{width:256/@r;position: absolute;right: 2%;bottom: 1%;}
+.logos{width:200/@r;position: absolute;right: 2%;bottom: 1%;}
 .hx{float: left;width:100%;height:15/@r;background: #F7F7F7;}
 .hx div{width:96%;height: 100%;float: left;background: #fff;margin: 0 2%;}
+.ncd{float: left;width:100%;color: #333333;font-size:23/@r;line-height:200%;}
