--- a/css/main.less
+++ b/css/main.less
@@ -149,9 +149,10 @@ footer p{float: left;width: 100%;font-size: 16/@r;text-align: center;color: #000
 .videos:nth-of-type(1){margin-bottom: 20/@r;}
 //product
 
-.product{background: #fff;width: 40%;margin:20/@r 5% 0 5%;overflow: hidden;float: left;}
+.product{background: #fff;width: 40%;margin:30/@r 5% 30/@r 5%;overflow: hidden;float: left;}
 //.product img{width: 100%;max-width: 100%;display: block;float: left;}
-.product span{width:100%;float: left;display: block;}
+.product span{width:100%;float: left;display: block;height:240/@r;}
+.product span img{width: 100%;height:240/@r;}
 .product p a{text-align: center;background:#f3e1be;color: #232323;float: left;width:100%;font-size: 24/@r;text-align: center;padding:5/@r 0;}
 
 
