--- a/css/main.css
+++ b/css/main.css
@@ -553,7 +553,7 @@ footer p {
 .product {
   background: #fff;
   width: 40%;
-  margin: 0.4rem 5% 0 5%;
+  margin: 0.6rem 5% 0.6rem 5%;
   overflow: hidden;
   float: left;
 }
@@ -561,6 +561,11 @@ footer p {
   width: 100%;
   float: left;
   display: block;
+  height: 4.8rem;
+}
+.product span img {
+  width: 100%;
+  height: 4.8rem;
 }
 .product p a {
   background: #f3e1be;
