--- a/manage/template/main.html
+++ b/manage/template/main.html
@@ -33,7 +33,7 @@ print <<<EOT
 <div id="loading"><noscript>$noscript</noscript><br /><br /><img src="images/loading.gif" /></div>
 <div id="ly200">
 	<div id="topMenu">
-		<div id="top"><div id="service_tel">$service_tel</div></div>
+		<div id="top" style="background: url('images/logo.png') no-repeat;"><div id="service_tel">售后服务热线：020-89052455</div></div>
 	</div>
 	<div id="loginInfo">
 		<div id="member">$welcome</div>
