--- a/css/dome.less
+++ b/css/dome.less
@@ -21,3 +21,16 @@
 
 //speech
 .tcs{padding-bottom:60/@r;}
+
+
+
+.chairman{width:100%;height:700/@r;float:left;position: relative;overflow: hidden;}
+.logor{background: url(../img/logor.png) no-repeat left 55/@r;background-size:200/@r 530/@r;width: 200/@r;height:600/@r;position: absolute;left: 0;bottom: 0;}
+.chair_con{float: left;width: 100%;background: #fff;overflow: hidden;padding:55/@r 0;}
+.chair_con span{display: block;float: left;overflow: hidden;}
+.cha_nr{width:60%;padding: 0 6% 0 2%;}
+.cha_nr p{text-indent:2em;font-size: 21/@r;line-height: 160%;letter-spacing:2/@r;float: left;width: 100%;color: #323232;}
+.cha_nr h3{float: left;width: 100%;font-size:21/@r;color: #323232;}
+.cha_pic{width:26%;float: left;margin-right:2%;}
+.cha_pic img{width: 100%;display: block;float: left;margin-top:20%;}
+.cha_pic p{text-align: center;width: 100%;height: 30/@r;line-height: 30/@r;font-size: 18/@r;color:#323232;margin-top: 10/@r;float: left;}
