--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,12 @@ body {
   height: 100%;
   overflow-x: hidden;
   overflow-y: auto;
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+  -ms-transform: translate3d(0, 0, 0);
+  -o-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+  z-index: 99999999;
 }
 html {
   width: 100%;
@@ -76,11 +82,6 @@ section {
   width: 96%;
   padding: 0.2rem 2% 0.4rem 2%;
   background: #F7F7F7;
-  overflow: hidden;
-}
-.sectionh {
-  height: 11.4rem;
-  position: relative;
   overflow: hidden;
 }
 .color {
@@ -219,7 +220,7 @@ header {
 .nav_icon span {
   float: left;
   width: 1.9rem;
-  margin: 0.6rem 1.5rem;
+  margin: 0.4rem 0.9rem;
 }
 .nav_icon span p {
   float: left;
@@ -237,7 +238,7 @@ header {
   height: 1.9rem;
 }
 .nav_icon span p:nth-of-type(2) {
-  margin-top: 0.4rem;
+  margin-top: 0.3rem;
   width: 100%;
   height: 0.44rem;
 }
@@ -440,16 +441,13 @@ footer p {
   border-bottom: 0;
 }
 .new_boxs {
-  width: 100%;
+  width: 96%;
   background: #fff;
-  padding-top: 0.2rem;
-  margin-top: -0.2rem;
   float: left;
-  overflow: hidden;
-  position: relative;
-  overflow-x: hidden;
-  overflow-y: auto;
-  height: 100%;
+  position: absolute;
+  left: 2%;
+  top: 0;
+  z-index: 99999;
 }
 .logol {
   position: absolute;
@@ -680,4 +678,27 @@ footer p {
   color: #333333;
   font-size: 0.46rem;
   line-height: 200%;
+}
+.soills {
+  position: relative;
+  height: 11.4rem;
+  overflow-y: scroll;
+}
+.soilla {
+  overflow-x: hidden;
+  overflow-y: scroll;
+}
+.scrolls {
+  padding: 0;
+}
+.hxs {
+  width: 100% !important;
+  height: 0.2rem !important;
+  background: #F7F7F7 !important;
+  padding: 0.2rem 0 0.2rem 0 !important;
+}
+.hxs div {
+  width: 100% ;
+  background: #fff;
+  height: 0.14rem;
 }
