--- a/css/dome.less
+++ b/css/dome.less
@@ -23,7 +23,7 @@
 .tcs{padding-bottom:60/@r;}
 
 
-
+//董事长
 .chairman{width:100%;height:700/@r;float:left;position: relative;overflow: hidden;}
 .logor{background: url(../img/logor.png) no-repeat left 55/@r;background-size:200/@r 530/@r;width: 200/@r;height:600/@r;position: absolute;left: 0;bottom: 0;}
 .chair_con{float: left;width: 100%;background: #fff;overflow: hidden;padding:55/@r 0;}
@@ -34,3 +34,27 @@
 .cha_pic{width:26%;float: left;margin-right:2%;}
 .cha_pic img{width: 100%;display: block;float: left;margin-top:20%;}
 .cha_pic p{text-align: center;width: 100%;height: 30/@r;line-height: 30/@r;font-size: 18/@r;color:#323232;margin-top: 10/@r;float: left;}
+
+//荣耀
+
+.ry{width: 100%;float: left;padding: 86/@r 0 0 0;background: url(../img/rybg.jpg) no-repeat left top #fff;background-size:100% 1051/@r;}
+.ry_box{width:26%;margin: 0 1%;overflow: hidden;display: block;padding: 0 2%;margin-top: 20/@r;}
+.ry_box p{text-align: center;font-size:18/@r;color: #323232;line-height:160%;margin-top:10/@r;float: left;}
+.ry_box:nth-of-type(1){margin-left: 33%;}
+
+
+
+//心路历程
+
+.exper{float: left;width: 100%;overflow:hidden;background: url(../img/wapxllc_bg.png) no-repeat left top;background-size:100%;padding: 30/@r 0;}
+.lc_con{width:45%;overflow: hidden;margin: 0 50% 0 0%;display: block;background:url(../img/cen.png) no-repeat right top;background-size:40/@r auto;padding-left: 5%;}
+.lc_con h3{width:85%;float: left;font-size: 26/@r;color: #b50005;text-align: right;padding-right: 15%;}
+.lc_con p{overflow: hidden;display: block;float: left;color:#323232;width: 85%;padding-right:15%;background: url(../img/hxx.png) no-repeat 93% center;background-size:28/@r 1/@r;font-size: 21/@r;text-align: right;}
+.lc_con img{width: 120/@r;height: 70/@r;float: left;display: block;}
+.ex_box:nth-of-type(1) h3{background: url(../img/qz.png) no-repeat;background-size:20/@r 30/@r;background-position:60%;}
+
+.lc_conr{width:48%;overflow: hidden;margin: 0 0% 0 44.5%;display: block;background:url(../img/cen.png) no-repeat left top;background-size:40/@r auto;padding-right: 5%;}
+.lc_conr h3{width:85%;float: left;font-size: 26/@r;color: #b50005;text-align:left;padding-left: 15%;}
+.lc_conr p{overflow: hidden;display: block;float: left;color:#323232;width: 85%;padding-left:15%;background: url(../img/hxx.png) no-repeat 7% center;background-size:28/@r 1/@r;font-size: 21/@r;text-align:left;}
+.lc_conr img{width: 120/@r;height: 70/@r;float:right;display: block;}
+
