--- a/css/dome.less
+++ b/css/dome.less
@@ -46,15 +46,15 @@
 
 //心路历程
 
-.exper{float: left;width: 100%;overflow:hidden;background: url(../img/wapxllc_bg.png) no-repeat left top;background-size:100%;padding: 30/@r 0;}
-.lc_con{width:45%;overflow: hidden;margin: 0 50% 0 0%;display: block;background:url(../img/cen.png) no-repeat right top;background-size:40/@r auto;padding-left: 5%;}
+.exper{float: left;width: 100%;overflow:hidden;background: url(../img/wapxllc_bg.png) no-repeat left top #e9ddd4;background-size:100%;padding: 30/@r 0;}
+.lc_con{width:45%;overflow: hidden;margin: 0 50% 0 0%;display: block;background:url(../img/lct.png) no-repeat right top,url(../img/lctx.png) no-repeat 95% 40/@r;background-size:40/@r 40/@r,2/@r 100%;padding-left: 5%;}
 .lc_con h3{width:85%;float: left;font-size: 26/@r;color: #b50005;text-align: right;padding-right: 15%;}
-.lc_con p{overflow: hidden;display: block;float: left;color:#323232;width: 85%;padding-right:15%;background: url(../img/hxx.png) no-repeat 93% center;background-size:28/@r 1/@r;font-size: 21/@r;text-align: right;}
+.lc_con p{line-height: 160%;overflow: hidden;display: block;float: left;color:#323232;width: 85%;padding-right:15%;background: url(../img/hxx.png) no-repeat 93% center;background-size:28/@r 2/@r;font-size: 21/@r;text-align: right;height: 100/@r;}
 .lc_con img{width: 120/@r;height: 70/@r;float: left;display: block;}
-.ex_box:nth-of-type(1) h3{background: url(../img/qz.png) no-repeat;background-size:20/@r 30/@r;background-position:60%;}
+.ex_box:nth-of-type(1) h3{background: url(../img/qz.png) no-repeat;background-size:20/@r 30/@r;background-position:30%;}
 
-.lc_conr{width:48%;overflow: hidden;margin: 0 0% 0 44.5%;display: block;background:url(../img/cen.png) no-repeat left top;background-size:40/@r auto;padding-right: 5%;}
+.lc_conr{width:48%;overflow: hidden;margin: 0 0% 0 44.5%;display: block;background:url(../img/lct.png) no-repeat left top,url(../img/lctx.png) no-repeat 5% 40/@r;background-size:40/@r 40/@r,2/@r 100%;padding-right: 5%;}
 .lc_conr h3{width:85%;float: left;font-size: 26/@r;color: #b50005;text-align:left;padding-left: 15%;}
-.lc_conr p{overflow: hidden;display: block;float: left;color:#323232;width: 85%;padding-left:15%;background: url(../img/hxx.png) no-repeat 7% center;background-size:28/@r 1/@r;font-size: 21/@r;text-align:left;}
+.lc_conr p{line-height: 160%;overflow: hidden;display: block;float: left;color:#323232;width: 85%;padding-left:15%;background: url(../img/hxx.png) no-repeat 7% center;background-size:28/@r 2/@r;font-size: 21/@r;text-align:left;height: 100/@r;}
 .lc_conr img{width: 120/@r;height: 70/@r;float:right;display: block;}
-
+.lc_conbox{margin-top: 25/@r;}
