--- a/css/dome.css
+++ b/css/dome.css
@@ -160,7 +160,7 @@
   float: left;
   width: 100%;
   overflow: hidden;
-  background: url(../img/wapxllc_bg.png) no-repeat left top;
+  background: url(../img/wapxllc_bg.png) no-repeat left top #e9ddd4;
   background-size: 100%;
   padding: 0.6rem 0;
 }
@@ -169,8 +169,8 @@
   overflow: hidden;
   margin: 0 50% 0 0%;
   display: block;
-  background: url(../img/cen.png) no-repeat right top;
-  background-size: 0.8rem auto;
+  background: url(../img/lct.png) no-repeat right top, url(../img/lctx.png) no-repeat 95% 0.8rem;
+  background-size: 0.8rem 0.8rem, 0.04rem 100%;
   padding-left: 5%;
 }
 .lc_con h3 {
@@ -182,6 +182,7 @@
   padding-right: 15%;
 }
 .lc_con p {
+  line-height: 160%;
   overflow: hidden;
   display: block;
   float: left;
@@ -189,9 +190,10 @@
   width: 85%;
   padding-right: 15%;
   background: url(../img/hxx.png) no-repeat 93% center;
-  background-size: 0.56rem 0.02rem;
+  background-size: 0.56rem 0.04rem;
   font-size: 0.42rem;
   text-align: right;
+  height: 2rem;
 }
 .lc_con img {
   width: 2.4rem;
@@ -202,15 +204,15 @@
 .ex_box:nth-of-type(1) h3 {
   background: url(../img/qz.png) no-repeat;
   background-size: 0.4rem 0.6rem;
-  background-position: 60%;
+  background-position: 30%;
 }
 .lc_conr {
   width: 48%;
   overflow: hidden;
   margin: 0 0% 0 44.5%;
   display: block;
-  background: url(../img/cen.png) no-repeat left top;
-  background-size: 0.8rem auto;
+  background: url(../img/lct.png) no-repeat left top, url(../img/lctx.png) no-repeat 5% 0.8rem;
+  background-size: 0.8rem 0.8rem, 0.04rem 100%;
   padding-right: 5%;
 }
 .lc_conr h3 {
@@ -222,6 +224,7 @@
   padding-left: 15%;
 }
 .lc_conr p {
+  line-height: 160%;
   overflow: hidden;
   display: block;
   float: left;
@@ -229,13 +232,17 @@
   width: 85%;
   padding-left: 15%;
   background: url(../img/hxx.png) no-repeat 7% center;
-  background-size: 0.56rem 0.02rem;
+  background-size: 0.56rem 0.04rem;
   font-size: 0.42rem;
   text-align: left;
+  height: 2rem;
 }
 .lc_conr img {
   width: 2.4rem;
   height: 1.4rem;
   float: right;
   display: block;
+}
+.lc_conbox {
+  margin-top: 0.5rem;
 }
