--- a/css/main.less
+++ b/css/main.less
@@ -72,7 +72,7 @@ header{background: #fff;width: 100%;height: 100/@r;background: #fff;}
 .header_con{width: 480/@r;float: left;height: 80/@r;margin:12/@r 0;text-align: center;line-height: 80/@r;color: #d13600;font-size: 32/@r;}
 .header_logo{width:60/@r;height:80/@r;margin:12/@r 30/@r 12/@r 50/@r;background: url(../img/logo.png) no-repeat;background-size: 100% 100%;float: left;}
 .header_nav{float:right;width:60/@r;height: 60/@r;background: url(../img/nav.png) no-repeat;background-size: 100% 100%;position:relative;margin:20/@r 30/@r;}
-.i_ul{position: absolute;width: 200/@r;right:0;top:100/@r;z-index: 999999;background:url(../img/navlogo.png) no-repeat bottom #d13600;background-size: 100% 430/@r;display: none;}
+.i_ul{position: absolute;width: 200/@r;right:0;top:100/@r;z-index: 999999;background:url(../img/navlogo.png) no-repeat left bottom #d13600;background-size: 150/@r 430/@r;display: none;}
 .i_ul ul li{float: left;width: 100%;}
 .i_ul ul li a{overflow:hidden;white-space:nowrap;color:#fff;font-size: 24/@r;text-align: center;height:70/@r;line-height: 70/@r;width:92%;display: block;border-bottom:1px solid #b60005;margin:0 4%;}
 .i_uls{width: 200/@r;}
@@ -184,3 +184,6 @@ footer p{float: left;width: 100%;font-size: 16/@r;text-align: center;color: #000
 .scrolls{padding: 0;}
 .hxs{width: 100% !important;height:10/@r !important;background:#F7F7F7 !important;padding: 10/@r 0 10/@r 0 !important;}
 .hxs div{width: 100% ;background: #fff;height: 7/@r;}
+
+
+.videse{float: left;display: block;margin:2% 0;}
